--- a/projects/truenas-ui/src/lib/ix-tab/ix-tab.component.html
+++ b/projects/truenas-ui/src/lib/ix-tab/ix-tab.component.html
@@ -10,19 +10,17 @@
   (click)="onClick()"
   (keydown)="onKeydown($event)"
 >
-  <span class="ix-tab__icon" *ngIf="hasIcon">
-    <ng-container *ngIf="iconContent; else templateIcon">
-      <ng-container *ngTemplateOutlet="iconContent"></ng-container>
-    </ng-container>
-    <ng-template #templateIcon>
-      <ng-container *ngIf="iconTemplate; else stringIcon">
+  @if (hasIcon) {
+    <span class="ix-tab__icon">
+      @if (iconContent) {
+        <ng-container *ngTemplateOutlet="iconContent"></ng-container>
+      } @else if (iconTemplate) {
         <ng-container *ngTemplateOutlet="iconTemplate"></ng-container>
-      </ng-container>
-    </ng-template>
-    <ng-template #stringIcon>
-      <span [innerHTML]="icon"></span>
-    </ng-template>
-  </span>
+      } @else {
+        <span [innerHTML]="icon"></span>
+      }
+    </span>
+  }
   <span class="ix-tab__label">
     {{ label }}
     <ng-content></ng-content>
