--- a/projects/truenas-ui/src/lib/ix-file-picker/ix-file-picker-popup.component.html
+++ b/projects/truenas-ui/src/lib/ix-file-picker/ix-file-picker-popup.component.html
@@ -1,42 +1,48 @@
 <!-- Header with breadcrumb navigation -->
 <div class="ix-file-picker-header">
   <nav class="ix-file-picker-breadcrumb" aria-label="File path">
-    <button
-      *ngFor="let segment of currentPath() | ixTruncatePath; let last = last"
-      class="breadcrumb-segment"
-      [class.current]="last"
-      [class.parent-nav]="segment.name === '..'"
-      [disabled]="last"
-      (click)="navigateToPath(segment.path)">
-      {{ segment.name }}
-    </button>
+    @for (segment of currentPath() | ixTruncatePath; track $index; let last = $last) {
+      <button
+        class="breadcrumb-segment"
+        [class.current]="last"
+        [class.parent-nav]="segment.name === '..'"
+        [disabled]="last"
+        (click)="navigateToPath(segment.path)">
+        {{ segment.name }}
+      </button>
+    }
   </nav>
 
   <div class="ix-file-picker-actions">
-    <ix-button
-      *ngIf="allowCreate()"
-      variant="outline"
-      label="New Folder"
-      [disabled]="isCreateDisabled()"
-      (onClick)="onCreateFolder()">
-    </ix-button>
+    @if (allowCreate()) {
+      <ix-button
+        variant="outline"
+        label="New Folder"
+        [disabled]="isCreateDisabled()"
+        (onClick)="onCreateFolder()">
+      </ix-button>
+    }
   </div>
 </div>
 
 <!-- Loading indicator -->
-<div *ngIf="loading()" class="ix-file-picker-loading">
-  <ix-icon name="loading" library="mdi"></ix-icon>
-  <span>Loading...</span>
-</div>
+@if (loading()) {
+  <div class="ix-file-picker-loading">
+    <ix-icon name="loading" library="mdi"></ix-icon>
+    <span>Loading...</span>
+  </div>
+}
 
 <!-- File table -->
-<div class="ix-file-picker-content" *ngIf="!loading()">
+@if (!loading()) {
+  <div class="ix-file-picker-content">
   <ix-table
     [dataSource]="filteredFileItems()"
     [displayedColumns]="multiSelect() ? displayedColumns : displayedColumns.slice(1)">
 
     <!-- Selection column -->
-    <ng-container ixColumnDef="select" *ngIf="multiSelect()">
+    @if (multiSelect()) {
+      <ng-container ixColumnDef="select">
       <ng-template ixHeaderCellDef>
         <!-- Select all checkbox -->
       </ng-template>
@@ -48,7 +54,8 @@
           (click)="$event.stopPropagation()"
           (change)="onItemClick(item)">
       </ng-template>
-    </ng-container>
+      </ng-container>
+    }
 
     <!-- Name column -->
     <ng-container ixColumnDef="name">
@@ -56,75 +63,84 @@
       <ng-template ixCellDef let-item>
 
         <!-- NORMAL MODE: Display name -->
-        <div *ngIf="!item.isCreating"
-             class="file-name-cell"
-             [class.disabled]="!!item.disabled"
-             [class.zfs-object]="isZfsObject(item)"
-             (click)="onItemClick(item)"
-             (dblclick)="onItemDoubleClick(item)">
-          <ix-icon
-            [name]="getItemIcon(item)"
-            [library]="getItemIconLibrary(item)"
-            [class]="'file-icon-' + item.type"
-            class="file-icon">
-          </ix-icon>
-          <span class="file-name">{{ item.name }}</span>
+        @if (!item.isCreating) {
+          <div
+               class="file-name-cell"
+               [class.disabled]="!!item.disabled"
+               [class.zfs-object]="isZfsObject(item)"
+               (click)="onItemClick(item)"
+               (dblclick)="onItemDoubleClick(item)">
+            <ix-icon
+              [name]="getItemIcon(item)"
+              [library]="getItemIconLibrary(item)"
+              [class]="'file-icon-' + item.type"
+              class="file-icon">
+            </ix-icon>
+            <span class="file-name">{{ item.name }}</span>
 
-          <!-- ZFS badge -->
-          <span
-            *ngIf="isZfsObject(item)"
-            class="zfs-badge"
-            [class]="'zfs-badge-' + item.type">
-            {{ getZfsBadge(item) }}
-          </span>
+            <!-- ZFS badge -->
+            @if (isZfsObject(item)) {
+              <span
+                class="zfs-badge"
+                [class]="'zfs-badge-' + item.type">
+                {{ getZfsBadge(item) }}
+              </span>
+            }
 
-          <!-- Permission indicator -->
-          <ix-icon
-            *ngIf="item.permissions === 'none'"
-            name="lock"
-            library="mdi"
-            class="permission-icon">
-          </ix-icon>
-        </div>
+            <!-- Permission indicator -->
+            @if (item.permissions === 'none') {
+              <ix-icon
+                name="lock"
+                library="mdi"
+                class="permission-icon">
+              </ix-icon>
+            }
+          </div>
+        }
 
         <!-- EDIT MODE: Inline name input with error display -->
-        <div *ngIf="item.isCreating" class="file-name-cell-wrapper">
-          <div class="file-name-cell editing" [class.has-error]="!!item.creationError">
-            <ix-icon
-              name="folder"
-              library="mdi"
-              class="file-icon file-icon-folder">
-            </ix-icon>
-            <input
-              #folderNameInput
-              type="text"
-              role="textbox"
-              aria-label="Folder name"
-              class="folder-name-input"
-              [class.error]="!!item.creationError"
-              [value]="item.name"
-              [disabled]="creationLoading()"
-              (keydown)="onFolderNameKeyDown($event, item)"
-              (blur)="onFolderNameInputBlur($event, item)"
-              [attr.data-autofocus]="true"
-              spellcheck="false"
-              autocomplete="off">
+        @if (item.isCreating) {
+          <div class="file-name-cell-wrapper">
+            <div class="file-name-cell editing" [class.has-error]="!!item.creationError">
+              <ix-icon
+                name="folder"
+                library="mdi"
+                class="file-icon file-icon-folder">
+              </ix-icon>
+              <input
+                #folderNameInput
+                type="text"
+                role="textbox"
+                aria-label="Folder name"
+                class="folder-name-input"
+                [class.error]="!!item.creationError"
+                [value]="item.name"
+                [disabled]="creationLoading()"
+                (keydown)="onFolderNameKeyDown($event, item)"
+                (blur)="onFolderNameInputBlur($event, item)"
+                [attr.data-autofocus]="true"
+                spellcheck="false"
+                autocomplete="off">
 
-            <!-- Loading indicator during submission -->
-            <ix-icon
-              *ngIf="creationLoading()"
-              name="loading"
-              library="mdi"
-              class="creation-loading-icon">
-            </ix-icon>
-          </div>
+              <!-- Loading indicator during submission -->
+              @if (creationLoading()) {
+                <ix-icon
+                  name="loading"
+                  library="mdi"
+                  class="creation-loading-icon">
+                </ix-icon>
+              }
+            </div>
 
-          <!-- Inline error message -->
-          <div *ngIf="item.creationError" class="folder-creation-error">
-            <ix-icon name="alert-circle" library="mdi" class="error-icon"></ix-icon>
-            <span class="error-text">{{ item.creationError }}</span>
+            <!-- Inline error message -->
+            @if (item.creationError) {
+              <div class="folder-creation-error">
+                <ix-icon name="alert-circle" library="mdi" class="error-icon"></ix-icon>
+                <span class="error-text">{{ item.creationError }}</span>
+              </div>
+            }
           </div>
-        </div>
+        }
 
       </ng-template>
     </ng-container>
@@ -133,8 +149,12 @@
     <ng-container ixColumnDef="size">
       <ng-template ixHeaderCellDef>Size</ng-template>
       <ng-template ixCellDef let-item>
-        <span *ngIf="item.size !== undefined">{{ item.size | ixFileSize }}</span>
-        <span *ngIf="item.size === undefined && item.type === 'folder'" class="folder-indicator">--</span>
+        @if (item.size !== undefined) {
+          <span>{{ item.size | ixFileSize }}</span>
+        }
+        @if (item.size === undefined && item.type === 'folder') {
+          <span class="folder-indicator">--</span>
+        }
       </ng-template>
     </ng-container>
 
@@ -142,33 +162,44 @@
     <ng-container ixColumnDef="modified">
       <ng-template ixHeaderCellDef>Modified</ng-template>
       <ng-template ixCellDef let-item>
-        <span *ngIf="item.modified">{{ formatDate(item.modified) }}</span>
+        @if (item.modified) {
+          <span>{{ formatDate(item.modified) }}</span>
+        }
       </ng-template>
     </ng-container>
 
 
   </ix-table>
-  
+
   <!-- Empty state -->
-  <div *ngIf="filteredFileItems().length === 0" class="empty-state">
-    <ix-icon name="folder-open" library="mdi"></ix-icon>
-    <p>No items found</p>
+  @if (filteredFileItems().length === 0) {
+    <div class="empty-state">
+      <ix-icon name="folder-open" library="mdi"></ix-icon>
+      <p>No items found</p>
+    </div>
+  }
   </div>
-</div>
+}
 
 <!-- Footer -->
-<div class="ix-file-picker-footer" *ngIf="!loading()">
-  <span class="selection-count" *ngIf="selectedItems().length > 0">
-    {{ selectedItems().length }} item{{ selectedItems().length !== 1 ? 's' : '' }} selected
-  </span>
-  <span class="selection-count" *ngIf="selectedItems().length === 0">
-    No items selected
-  </span>
-  <div class="footer-actions">
-    <ix-button
-      label="Select"
-      [disabled]="selectedItems().length === 0"
-      (onClick)="onSubmit()">
-    </ix-button>
+@if (!loading()) {
+  <div class="ix-file-picker-footer">
+    @if (selectedItems().length > 0) {
+      <span class="selection-count">
+        {{ selectedItems().length }} item{{ selectedItems().length !== 1 ? 's' : '' }} selected
+      </span>
+    }
+    @if (selectedItems().length === 0) {
+      <span class="selection-count">
+        No items selected
+      </span>
+    }
+    <div class="footer-actions">
+      <ix-button
+        label="Select"
+        [disabled]="selectedItems().length === 0"
+        (onClick)="onSubmit()">
+      </ix-button>
+    </div>
   </div>
-</div>
+}
